style.css
/*
Theme Name: VectorGen
Theme URI:
Author: Robert Cole, Aliyah Northington, Lauren Rowland
Description: Custom theme for VectorGen
Version: 0.1
License: Open
Text Domain: vectorgen
*/

@import url('https://fonts.googleapis.com/css?family=Lato:700|Open+Sans:400,400i');
@import url("stylesheets/normalize.css");
@import url("stylesheets/skeleton.css");

/* Colors:
Blue: #174A7F;
Light Gray: #c7d6e0;
Teal: #40B2B1;
Charcoal: #383E4B;
White: #F4FAFE;
*/

body{
  background-color: #F4FAFE;
  color: #383E4B;
}

h1, h2, h3, h4, h5{
  font-family: 'Lato', sans-serif;
  color: #174A7F;
}

p{
  font-family: 'Open Sans', sans-serif;
  color: #383E4B;
}

a{
  font-family: 'Open Sans', sans-serif;
}

a:hover{
  color: #40B2B1;
}

/* Header */
header{
  border-bottom: 3px solid #383e4b;
  color: #383E4B;
}

header a{
  color: #383E4B;
  text-decoration: none;
}

header .row {
  display: flex;
  justify-content: center;
  align-items: center;
}

header ul{
  float: right;
}

ul#menu-header-nav {
  margin: 0;
}

ul#menu-header-nav li {
  display: inline;
  padding: 0 20px;
}

ul#menu-header-nav li:last-child a {
  background-color: #40B2B1;
  color: white;
  padding: 8px 20px;
  border-radius: 5px;
}

ul#menu-header-nav li:last-child a:hover {
    background-color: #174A7F;
}

.header-image a {
  display: flex;
  align-items: center;
}

header .logo{
  width: 100%;
  max-width: 100px;
  height: auto;
}

/* Footer */
footer{
  background-color: #174A7F;
  color: #F4FAFE;
}

footer p{
  color: #F4FAFE;
  display: flex;
}

footer a{
  color: #f4fafe;
  text-decoration: none;
  font-weight: 700;
}

footer .row {
  display: flex;
  flex-direction: column;
}

ul#menu-footer-nav {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding-top: 15px;
}

header ul li, footer ul li{
  list-style-type: none;
}

/* Widgets */
.widget-title{
  text-align: center;
  padding: 15px;
}

/* Home Page */
.home-block-color{
  background-color: #c7d6e0;
}

.home-block{
  padding: 20px 0 50px 0;
}

.hero {
    position: relative;
    text-align: center;
  }

.hero-image img{
  opacity: 0.25;
  height: 90vh;
}

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.center {
  margin: auto;
  text-align: center;
}

button.button-primary.hero-button {
    font-size: 1.5rem;
    margin: 15px;
}

.button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
    color: #FFF;
    background-color: #40B2B1;
    border-color: #40B2B1;
}

button.button-primary.hero-button:hover {
    background-color: #174A7F;
    border-color: #174A7F;
}

/* Learn More */

h5.invest {
    text-align: center;
    margin-top: 42px;
    margin-bottom: 0px;
    font-weight: bold;
    font-size: 4rem;
    margin-bottom: 50px;
}


canvas#budget{
  margin-left: 50%;
}



/* Blog Page */
h1.blog {
    text-align: center;
    margin-top: 42px;
    margin-bottom: 0px;
    font-weight: bold;
}

.one-third.column.posts {
    margin-left: 25px;
    margin-top: 40px;
}

.blog-row{
  padding-top: 10px;
  padding-bottom: 10px;
}

a.blog-title{
  color: #383E4B;
  font-size: 3rem;
  text-decoration: none;

}

a.blog-title:hover{
  color: #40B2B1;
}

h3{
      margin-bottom: 0px;
}

p.p{
  margin-bottom: 0px;
  margin-top: 0px;
}

img.attachment-medium.size-medium.wp-post-image {
  border: 1px solid #dedddd;
  }

img.attachment-medium.size-medium.wp-post-image:hover {
  opacity: 0.5;
  }


/* Blog Post */

h2.blog-post-title{
  font-size: 5rem;
  font-weight: 400;
  text-align: center;
  margin-top: 35px;
}

p.p.l {
    margin-bottom: 32px;
}

.blog-post-content{
  margin-bottom: 80px;
}

/* Contact Page */

.row.contact-page, .row.home-page{
  display: flex;
  justify-content: center;
}

.form-bg{
  background-color: #c7d6e0;
  padding: 30px;
}

.contact-form input.wpcf7-form-control.wpcf7-submit {
  background-color: #40B2B1;
  color: #fff;
  border-radius: 5px;
  border: none;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.5rem;
}

.contact-form input.wpcf7-form-control.wpcf7-submit:hover {
    background-color: #174A7F;
    color: #fff;
}

input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, textarea:focus {
    border-color: #40B2B1;
}

.contact-us{
  padding: 20px 0 30px 0;
}

.collaborators {
  padding: 20px 0 50px 0;
}

/* OUR PLAN PAGE */

.our_plan {
  color: #F4FAFE;
  text-align: center;
  font-size: 2.3em;
  padding: 20px;
  margin: 0;
}

.our-plan-stage1 {
  color: #F4FAFE;
  font-size: 1.7em;
  padding-bottom: 15px;
}

.our-plan-stage2 {
  color: #383E4B;
  font-size: 1.7em;
  padding-bottom: 15px;
}

.our-plan-stage3 {
  color: #383E4B;
  font-size: 1.7em;
  padding-bottom: 15px;
}

.our-plan-stage4 {
  color: #F4FAFE;
  font-size: 1.7em;
  padding-bottom: 15px;
}

.our-plan-stage5 {
  color: #383E4B;
  font-size: 1.7em;
  padding-bottom: 15px;
}

.stage1_container {
  background-color: #174A7F;
  color: #F4FAFE;
}

.stage2_container {
  background-color: #F4FAFE;
}

.stage3_container {
  background-color: #c7d6e0;
}

.stage4_container {
  background-color: #174A7F;
  color: #F4FAFE;
}

.stage5_container {
  background-color: #F4FAFE;
}


.stage1 {
  color: #F4FAFE;
  background-color: #174A7F;
  padding-bottom: 50px;
}

.stage1-text p {
  color: #F4FAFE;
}

.stage1-text p {
  color: #F4FAFE;
}

.stage4-text p {
  color: #F4FAFE;
}

.stage2 {
  background-color: #F4FAFE;
  padding: 50px 0px 50px 0px;
}

.stage3 {
  background-color: #c7d6e0;
  padding: 50px 0px 50px 0px;
}

.stage4 {
  color: #F4FAFE;
  background-color: #174A7F;
  padding: 50px 0px 50px 0px;
}

.stage5 {
  background-color: #F4FAFE;
  padding: 50px 0px 50px 0px;
}

/* ABOUT PAGE */

